--- a/index.html
+++ b/index.html
@@ -1,173 +1,54 @@
 <!DOCTYPE html>
 <html lang="ru">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!--======= swipe =============-->
-  <link rel="stylesheet" href="./libs/swiper/swiper.min.css">
-  <!--======= кастомный плагин выбра даты в инпуте =============-->
-  <link rel="stylesheet" href="./libs/ui-datapicker/ui-datapicker.css">
-  <!--=======убрать перевод цифр в номер телефона на ios  и safari ======-->
-  <meta name="format-detection" content="telephone=no">
-  <!--===================favicon ==================================-->
-  <link rel="apple-touch-icon" sizes="76x76" href="./img/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
-  <link rel="manifest" href="./img/favicon/site.webmanifest">
-  <link rel="mask-icon" href="./img/favicon/safari-pinned-tab.svg" color="#5bbad5">
-  <link rel="shortcut icon" href="./img/favicon/favicon.ico">
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="msapplication-config" content="./img/favicon/browserconfig.xml">
-  <meta name="theme-color" content="#ffffff">
-  <!--===================opengraf=======================================-->
-  <link rel="stylesheet" href="./fonts/fonts.css">
-  <link rel="stylesheet" href="./css/main.css">
-  <title>Сервис поиска услуг в Грузии</title>
-</head>
-
-<body style="opacity:0;transition:opacity .7s;">
-  <div id="overlay"></div>
-  <div class="start-page">
-    <h1>IWEEK</h1>
-    <div class="start-page__cards mb-32">
-      
-      <a href="main.html">
-        <span>Главная</span>
-      </a>
-      <a href="main2.html">
-        <span>Шапка с поиском</span>
-      </a>
-      <a href="about.html">
-        <span>О нас</span>
-      </a>
-      <a href="prices.html">
-        <span>Цены</span>
-      </a>
-      <a href="confirm-appoint-modal.html">
-        <span>Авторизация шаг #1</span>
-      </a>
-      <a href="authoriz-2.html">
-        <span>Авторизация шаг #2</span>
-      </a>
-      <a href="authoriz-3.html">
-        <span>Авторизация шаг #3</span>
-      </a>
-      <a href="authoriz-4.html">
-        <span>Авторизация шаг #4</span>
-      </a>
-      <a href="authoriz-5.html">
-        <span>Авторизация шаг #5</span>
-      </a>
-      <a href="page-404.html">
-        <span>404</span>
-      </a>
-      <a href="empl-reg.html">
-        <span>Регистрация Исполнителя</span>
-      </a>
-    </div>
-    <h2 class="text-center mb-32">Кабинет сотрудника</h2>
-    <div class="start-page__cards mb-32">
-      <a href="page-schedule.html">
-        <span>Расписание</span>
-      </a>
-      <a href="page-schedule-2.html">
-        <span>Расписание. Модальное окно</span>
-        <br>
-        <span>"Вы не сохранили изменения"</span>
-      </a>
-      <a href="page-tasks.html">
-        <span>Задачи</span>
-      </a>
-      <a href="visitor-page.html">
-        <span>Пациенты</span>
-      </a>
-      <a href="employees-page.html">
-        <span>Сотрудники</span>
-      </a>
-    </div>
-    <h2 class="text-center mb-32">Сотрудники - sublinks</h2>
-    <div class="start-page__cards mb-32">
-      <a href="employee-personal-page.html">
-        <span>Профиль сотрудника</span>
-      </a>
-      <a href="empl-schedule.html">
-        <span>График сотрудника</span>
-      </a>
-      <a href="empl-service-list.html">
-        <span>Услуги сотрудника </span>
-      </a>
-    </div>
-    <h2 class="text-center mb-32">Пациенты - sublinks</h2>
-    <div class="start-page__cards mb-32">
-      <a href="add-profile-visitor.html">
-        <span>Добавить пациента</span>
-      </a>
-      <a href="duplication-modal.html">
-        <span>Модальное окно
-          <br>дублирование пациента
-        </span>
-      </a>
-      <a href="edit-profile-visitor.html">
-        <span>Редактировать пациента</span>
-      </a>
-      <a href="visitor-edit-page.html">
-        <span>Профиль пациента</span>
-      </a>
-      <a href="visitor-page2.html">
-        <span>Посещения пациента</span>
-      </a>
-    </div>
-    <h2 class="text-center mb-32">Кабинет Пациента</h2>
-    <div class="start-page__cards mb-32">
-      <a href="patient-main.html">
-        <span>Пациент - Главная</span>
-      </a>
-      <a href="patient-edit.html">
-        <span>Пациент - Редактировать</span>
-      </a>
-      <a href="patient-favorite-empty.html">
-        <span>Пациент - Нет избранного</span>
-      </a>
-      <a href="patient-favorite.html">
-        <span>Пациент - Избранное</span>
-      </a>
-      <a href="patient-reviews.html">
-        <span>Пациент - Отзывы</span>
-      </a>
-      <a href="patient-history.html">
-        <span>Пациент - Записи</span>
-      </a>
-    </div>
-    <h2 class="text-center mb-32">Модалки - всплывашки</h2>
-    <div class="start-page__cards">
-      <a href="duplication-modal.html">
-        <span>Дублирование пациента в БД</span>
-      </a>
-      <a href="success-reg-empl.html">
-        <span>Успешная регистрация Исполнителя</span>
-      </a>
-      <a href="success-reg.html">
-        <span>Успешная регистрация Пациента</span>
-      </a>
-      <a href="restore-passw.html">
-        <span>Ошибка авторизации</span>
-      </a>
-      <a href="another-time.html">
-        <span>Время занято</span>
-      </a>
-    </div>
-  </div>
-  <!--=============== jquery ===================-->
-  <script src="./libs/jquery/jquery-3.0.0.min.js"></script>
-  <!--=============== swiper ===================-->
-  <script src="./libs/swiper/swiper.js"></script>
-  <!--======= кастомный плагин выбра даты в инпуте =============-->
-  <script src="./libs/ui-datapicker/ui-datapicker.js"></script>
-  <!--=============== мои скрипты ===================-->
-  <script src="./js/quiz.js"></script>
-  <script src="./js/main.js"></script>
-</body>
-
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<!--======= swipe =============-->
+		<link rel="stylesheet" href="./libs/swiper/swiper.min.css">
+		<!--======= кастомный плагин выбра даты в инпуте =============-->
+		<link rel="stylesheet" href="./libs/ui-datapicker/ui-datapicker.css">
+		<!--=======убрать перевод цифр в номер телефона на ios  и safari ======-->
+		<meta name="format-detection" content="telephone=no">
+		<!--===================favicon ==================================-->
+		<link rel="apple-touch-icon" sizes="76x76" href="./img/favicon/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
+		<link rel="manifest" href="./img/favicon/site.webmanifest">
+		<link rel="mask-icon" href="./img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+		<link rel="shortcut icon" href="./img/favicon/favicon.ico">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="msapplication-config" content="./img/favicon/browserconfig.xml">
+		<meta name="theme-color" content="#ffffff">
+		<!--===================opengraf=======================================-->
+		<link rel="stylesheet" href="./fonts/fonts.css">
+		<link rel="stylesheet" href="./css/main.css">
+		<title>Сервис поиска услуг в Грузии</title>
+	</head>
+	<body style="opacity:0;transition:opacity .7s;">
+		<div id="overlay"></div>
+		<div class="start-page">
+			<h1>IWEEK</h1>
+			<div class="start-page__cards mb-32"><a href="main3.html"><span>Шапка с категориями</span></a><a href="about.html"><span>О нас</span></a><a href="prices.html"><span>Цены</span></a><a href="confirm-appoint-modal.html"><span>Авторизация  шаг #1</span></a><a href="authoriz-2.html"><span>Авторизация  шаг #2</span></a><a href="authoriz-3.html"><span>Авторизация шаг #3</span></a><a href="authoriz-4.html"><span>Авторизация шаг #4</span></a><a href="authoriz-5.html"><span>Авторизация шаг #5</span></a><a href="page-404.html"><span>404</span></a><a href="empl-reg.html"><span>Регистрация Исполнителя</span></a></div>
+			<h2 class="text-center mb-32">Кабинет сотрудника</h2>
+			<div class="start-page__cards mb-32"><a href="page-schedule.html"><span>Расписание</span></a><a href="page-schedule-2.html"><span>Расписание. Модальное окно</span><br><span>"Вы не сохранили изменения"</span></a><a href="page-tasks.html"><span>Задачи</span></a><a href="visitor-page.html"><span>Пациенты</span></a><a href="employees-page.html"><span>Сотрудники</span></a></div>
+			<h2 class="text-center mb-32">Сотрудники - sublinks</h2>
+			<div class="start-page__cards mb-32"><a href="employee-personal-page.html"><span>Профиль сотрудника</span></a><a href="empl-schedule.html"><span>График сотрудника</span></a><a href="empl-service-list.html"><span>Услуги сотрудника		</span></a></div>
+			<h2 class="text-center mb-32">Пациенты - sublinks</h2>
+			<div class="start-page__cards mb-32"><a href="add-profile-visitor.html"><span>Добавить пациента</span></a><a href="duplication-modal.html"><span>Модальное окно<br>дублирование пациента</span></a><a href="edit-profile-visitor.html"><span>Редактировать пациента</span></a><a href="visitor-edit-page.html"><span>Профиль пациента</span></a><a href="visitor-page2.html"><span>Посещения пациента</span></a></div>
+			<h2 class="text-center mb-32">Кабинет Пациента</h2>
+			<div class="start-page__cards mb-32"><a href="patient-main.html"><span>Пациент - Главная</span></a><a href="patient-edit.html"><span>Пациент - Редактировать</span></a><a href="patient-favorite-empty.html"><span>Пациент - Нет избранного</span></a><a href="patient-favorite.html"><span>Пациент - Избранное</span></a><a href="patient-reviews.html"><span>Пациент - Отзывы</span></a><a href="patient-history.html"><span>Пациент - Записи</span></a></div>
+			<h2 class="text-center mb-32">Модалки - всплывашки</h2>
+			<div class="start-page__cards"><a href="duplication-modal.html"><span>Дублирование пациента в БД</span></a><a href="success-reg-empl.html"><span>Успешная регистрация Исполнителя</span></a><a href="success-reg.html"><span>Успешная регистрация Пациента</span></a><a href="restore-passw.html"><span>Ошибка авторизации</span></a><a href="another-time.html"><span>Время занято</span></a></div>
+		</div>
+		<!--=============== jquery ===================-->
+		<script src="./libs/jquery/jquery-3.0.0.min.js"></script>
+		<!--=============== swiper ===================-->
+		<script src="./libs/swiper/swiper.js"></script>
+		<!--======= кастомный плагин выбра даты в инпуте =============-->
+		<script src="./libs/ui-datapicker/ui-datapicker.js"></script>
+		<!--=============== мои скрипты ===================-->
+		<script src="./js/quiz.js"></script>
+		<script src="./js/main.js"></script>
+	</body>
 </html>
